# quantvolt

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  release.yml  repository-policy.yml  tests.yml
.kiro/: spec-audit-2026-07-16.md
data/: README.md
data/samples/: gas_forwards.csv  power_prices.csv  ppa_intervals.csv  weather.csv
docs/: api.md  claims.md  european-markets.md  market_conventions.json  risk-and-assets.md  spec-audit-2026-07-16.md  validation.md
rust/src/: asian_mc.rs  lib.rs  paths.rs
scripts/: README.md  check_repository_size.py  data_access.py  fetch_smard_power_data.py  fetch_smard_power_fundamentals.py  prepare_gas_data.py  prepare_power_experiment_data.py  run_power_ppa_backtest.py  verify_power_data.py
scripts/ci/: check_docs.py  check_provenance.py  check_repository_size.py  check_wheel_contents.py  docs_lint_allow.txt
scripts/data/: run_power_ppa_backtest.py  verify_power_data.py
scripts/fixtures/: _gen_common.py  gen_bachelier_fixtures.py  gen_black76_fixtures.py  gen_capfloor_fixtures.py  gen_spread_fixtures.py  gen_storage_fixtures.py  generate_quantlib_fixtures.py
scripts/studies/: storage_grid_refinement_study.py
site/: DOCUMENTATION_PLAN.md  README.md  api-coverage.json  api-data.js  build_api.py  complete-guides.js  content.js  enhancements.css  index.html  script.js  styles.css
site/examples/: shared_setup.py  verify_foundations.py  verify_native_monte_carlo.py  verify_portfolio_risk.py  verify_ppa.py  verify_pricing.py  verify_quickstart.py  verify_research.py  verify_tutorial_ppa.py  verify_tutorial_spark.py  verify_tutorial_storage.py  verify_validation.py
site/tools/: refactor_reference_design.py
src/quantvolt/: __init__.py  _core.pyi  _validation.py  cli.py  exceptions.py  testing.py
src/quantvolt/assets/: __init__.py  _tolerance.py  dispatch_approx.py  dispatch_deterministic.py  dispatch_sdp.py  long_dated.py  plant.py  storage.py
src/quantvolt/curvemodels/: __init__.py  multifactor.py  schwartz_smith.py
src/quantvolt/curves/: __init__.py  arbitrage.py  builder.py
src/quantvolt/data/: __init__.py  base.py  commercial.py  dataset_catalog.json  datasets.py  entsoe.py  entsog.py  netztransparenz.py  open_meteo.py  smard.py
src/quantvolt/hedging/: __init__.py  _conditioning.py  hybrid.py  mean_variance.py  ppa_nomination.py  ppa_walk_forward.py  variance_min.py
src/quantvolt/market/: __init__.py  outages.py  transmission.py  (+1 more)
tests/: conftest.py  strategies.py
tests/benchmarks/: test_ch10_benchmarks.py  test_sla_benchmarks.py
tests/integration/: test_ch10_end_to_end.py  test_end_to_end.py
tests/property/: test_asset_properties.py  test_bachelier_properties.py  test_cross_cutting_properties.py  test_curve_properties.py  test_extended_properties.py  test_hedging_risk_adjustment_properties.py  test_portfolio_native_pricers_properties.py  test_ppa_contract_terms_properties.py  test_pricing_properties.py  test_risk_mtm_properties.py  test_short_side_properties.py  test_simulation_properties.py  test_spread_properties.py  test_structured_properties.py  test_supporting_properties.py  test_unit_properties.py  test_var_family_properties.py  test_vol_stats_properties.py
tests/unit/: test_aggregation.py  test_arbitrage.py  test_black76.py  test_cashflow_metrics.py  test_cfar.py  test_commodity.py  test_conventions_manifest.py  test_correlated_mc.py  test_correlation.py  test_covariance.py  test_credit_var.py  test_curve.py  test_curve_builder.py  test_data_adapters.py  test_data_base.py  test_data_isolation.py  test_datasets.py  test_daycount.py  test_descriptive.py  test_discount_curve.py  test_dispatch_approx.py  test_dispatch_deterministic.py  test_dispatch_sdp.py  test_exotic.py  test_greeks.py  test_hybrid_hedging.py  test_implied_vol.py  test_instruments.py  test_interpolation.py  test_long_dated.py  test_mark_to_market.py  test_mc_var.py  test_mean_reversion.py  test_mean_variance.py  test_monte_carlo.py  test_multifactor.py  test_netztransparenz.py  test_normality.py  test_outages.py  test_parametric_var.py  (+38 more)
tests/validation/: _fixtures.py  _lp_reference.py  coverage_manifest.json  test_bachelier_fixtures.py  test_black76_fixtures.py  test_capfloor_fixtures.py  test_fixture_schema.py  test_mc_convergence.py  test_spread_fixtures.py  test_storage_fixtures.py  test_storage_lp_crosscheck.py
(+70 files in other folders)
